--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_html: ^1.0.0
   html_character_entities: ^0.1.2+4
   cached_network_image: ^2.2.0+1
+  rxdart: ^0.24.1
 
 
   # The following adds the Cupertino Icons font to your application.
